<resources>
    <string name="app_name">SweepRobot</string>
    <string name="enter">立即体验</string>
    <string name="input_ip">请输入IP</string>
    <string name="login">登陆</string>

    <!--activity_wifi-->
    <string name="wifi_list_title">可用wifi列表</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_failed">连接失败</string>

    <!--dialog_input_wifi_pw-->
    <string name="input_pw_hint"> 密码</string>
    <string name="dialog_input_wifi_btn_cancel">取消</string>
    <string name="dialog_input_wifi_btn_sure">确定</string>

    <!--pinchImageView-->
    <string name="un_effective">无效的目标点</string>
    <string name="action_point">标记点</string>
    <string name="action_path">路径</string>
    <string name="action_obstacle">虚拟墙</string>
    <string name="dialog_sure">确认</string>
    <string name="createMap">创建地图</string>
    <string name="createMap_desc">点击"创建地图"机器人将为您扫描出清洁区地图</string>

    <string name="manageMap">管理地图</string>
    <string name="manageMap_desc">点击"管理地图"对不同的地图进行管理：添加标记点，设置路径，添加虚拟墙等等</string>

    <string name="taskqueue">任务队列</string>
    <string name="taskqueue_desc">"任务队列"选择任务，执行任务</string>

    <string name="setting">设置</string>
    <string name="setting_desc">改变机器人的属性</string>
    <string name="advertise">创建</string>
    <string name="commit">提交</string>
    <string name="activity_edit_map_title">地图编辑</string>
    <string name="activity_map_manager_title">地图管理</string>
    <string name="input_name_hint">请输入名称</string>
    <string name="dialog_add_point_title">标记点</string>
    <string name="dialog_add_point_foot_cancel">取消</string>
    <string name="input_name_must_not_null">名字不能为空</string>
    <string name="dialog_Obstacle">虚拟墙</string>
    <string name="dialog_point_rename">重命名</string>
    <string name="namerobot">请为地图命名</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="set_title">设置</string>
    <string name="set_speed">速度</string>
    <string name="set_info">关于我们</string>
    <string name="set_version">版本信息</string>
    <string name="activity_set_info">杭州吉佩斯机器人有限公司\nwww.gps-bot.com</string>
    <string name="version_description">暂无版本更新</string>
    <string name="createTask">新建任务</string>
    <string name="preview">预览</string>
    <string name="editNavePose">编辑任务</string>
    <string name="pointNull">没有任务点</string>
    <string name="dialog_map_manager_delete">删除此地图</string>
    <string name="candidate">待选点</string>
    <string name="seleted">已选点</string>
    <string name="execute">执行</string>
    <string name="lookfor">任务详情</string>
    <string name="next">下一步</string>
    <string name="input_task_name">请输入任务名称</string>
    <string name="seleteType">选择任务类型：</string>
    <string name="seleteMap">请选择地图：</string>
    <string name="pleaseInputName">请输入任务名称</string>
    <string name="mapname" >地图名称:</string>
    <string name="createTime">创建时间：</string>
    <string name="taskIsexecute">是否执行</string>

</resources>
