<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_action_point"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/action_point"
        android:textSize="16sp"
        android:textColor="@color/color_black_b3000000"
        android:gravity="center"
        android:background="@drawable/dialog_action_sel"
        />

    <TextView
        android:id="@+id/dialog_action_path"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/action_path"
        android:textSize="16sp"
        android:textColor="@color/color_black_b3000000"
        android:gravity="center"
        android:background="@drawable/dialog_action_sel"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/dialog_action_obstacle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/action_obstacle"
        android:textSize="16sp"
        android:textColor="@color/color_black_b3000000"
        android:gravity="center"
        android:background="@drawable/dialog_action_sel"
        />
</LinearLayout>