<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    >

    <EditText
        android:id="@+id/dialog_input_wifi_pw_et"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:hint="@string/input_pw_hint"
        android:paddingLeft="13dp"
        android:background="@drawable/input_wifi_pw"/>

    <Button
        android:id="@+id/dialog_input_wifi_cancel"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/dialog_input_wifi_btn_cancel"
        android:textColor="@color/color_blue_3a9efb"
        android:background="@drawable/dialog_btn_sel"
        android:layout_below="@id/dialog_input_wifi_pw_et"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/dialog_input_wifi_sure"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/dialog_input_wifi_btn_sure"
        android:textColor="@color/color_blue_3a9efb"
        android:background="@drawable/dialog_wifi_btn"
        android:layout_below="@id/dialog_input_wifi_pw_et"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@id/dialog_input_wifi_pw_et"/>
</RelativeLayout>