<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/namerobot"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btn_1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:background="@drawable/btn_dialog_cancel"
        android:textColor="@color/white"
        android:text="@string/cancel"
        />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btn_2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_toRightOf="@+id/btn_1"
        android:background="@drawable/btn_dialog_ensure"
        android:textColor="@color/colorPrimary"
        android:text="@string/ensure"
        />

</RelativeLayout>